cmake_minimum_required(VERSION 3.14)
project(corewar1 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft/printf)
include_directories(libft/srcs)

add_executable(corewar1
        libft/printf/checker.c
        libft/printf/colors.c
        libft/printf/display.c
        libft/printf/flags.c
        libft/printf/ft_itoa_bpf.c
        libft/printf/ft_printf.c
        libft/printf/ft_printf.h
        libft/printf/ld_1.c
        libft/printf/ld_2.c
        libft/printf/ld_3.c
        libft/printf/ld_4.c
        libft/printf/libft_modf.c
        libft/printf/libft_modf2.c
        libft/printf/long_doudle.c
        libft/printf/maxnbr.c
        libft/printf/num_str.c
        libft/printf/num_str2.c
        libft/printf/take_str.c
        libft/printf/take_str2.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/get_next_line.c
        libft/srcs/get_next_line.h
        libft/srcs/libft.h
        srcs/create_list.c
        srcs/funct1.c
        srcs/funct2.c
        srcs/funct3.c
        srcs/funct4.c
        srcs/functions.c
        srcs/main.c
        srcs/read_struct.c
        assem.h
        op.h srcs/operations.c srcs/variables.c srcs/checks.c)
